--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
       rel="stylesheet"
     />
-     <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
@@ -24,40 +24,64 @@
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><img src="./img/logo.svg" alt="site logo" /></a>
-        <ul class="header-list list">
-          <li class="header-item"><a class="header-link link current" href="">About</a></li>
-          <li class="header-item"><a class="header-link link" href="#prices">Services and prices</a></li>
-          <li class="header-item"><a class="header-link link" href="#barbers">Barbers</a></li>
-          <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <a class="header-tel link" href="tel:+380441234567">+38 044 123 45 67</a>
-      <button class="header-btn btn" type="button">Online-booking</button>
+          <a class="header-logo" href="./index.html">
+            <svg class="logo-icon" width="69" height="55">
+              <use href="./img/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <ul class="header-list list">
+            <li class="header-item">
+              <a class="header-link link current" href="">About</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="#prices">Services and prices</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="#barbers">Barbers</a>
+            </li>
+            <li class="header-item">
+              <a class="header-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="header-tel link" href="tel:+380441234567"
+          >+38 044 123 45 67</a
+        >
+        <button class="header-btn btn" type="button">Online-booking</button>
       </div>
     </header>
     <main>
       <section class="hero">
-        <div class="container hero-container"><ul class="hero-list list">
-          <li class="hero-item">
-            <a class="hero-link link" href="" target="_blank" rel="noopener noreferrer nofollow"
-              >Instagram</a
-            >
-          </li>
-          <li class="hero-item">
-            <a class="hero-link link" href="" target="_blank" rel="noopener noreferrer nofollow"
-              >Youtube</a
-            >
-          </li>
-        </ul>
-        <div class="hero-wrap">
-          <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
-          <h1 class="hero-title">BarberShop</h1>
-          <p class="hero-after-title">
-            We are experts in trendy men’s haircuts.<br />
-            We work quickly, carefully and with style.
-          </p>
-        </div></div>
+        <div class="container hero-container">
+          <ul class="hero-list list">
+            <li class="hero-item">
+              <a
+                class="hero-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Instagram</a
+              >
+            </li>
+            <li class="hero-item">
+              <a
+                class="hero-link link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                >Youtube</a
+              >
+            </li>
+          </ul>
+          <div class="hero-wrap">
+            <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">BarberShop</h1>
+            <p class="hero-after-title">
+              We are experts in trendy men’s haircuts.<br />
+              We work quickly, carefully and with style.
+            </p>
+          </div>
+        </div>
       </section>
       <section class="about">
         <div class="container about-container">
@@ -80,7 +104,9 @@
             </li>
           </ul>
           <p class="about-pre-title pre-title">About</p>
-          <h2 class="about-title section-title">Best Barbershop in your city</h2>
+          <h2 class="about-title section-title">
+            Best Barbershop in your city
+          </h2>
           <p class="about-after-title">
             If you want to add more confidence to your image, you should
             definitely visit us.
@@ -88,16 +114,18 @@
           <p class="about-text">
             We are a team that never stops at what has been achieved and are
             thirsty for changes. And when you fall into the hands of our master,
-            you will never be the same again. We are a team that is always "on the
-            same wave" with clients. Therefore, we are always ready to improve
-            everyone who comes to us!
+            you will never be the same again. We are a team that is always "on
+            the same wave" with clients. Therefore, we are always ready to
+            improve everyone who comes to us!
           </p>
           <button type="button" class="about-btn btn">Online-booking</button>
         </div>
       </section>
       <section class="prices section" id="prices">
         <div class="container">
-          <p class="prices-pre-title pre-title">Spend your time with the best masters</p>
+          <p class="prices-pre-title pre-title">
+            Spend your time with the best masters
+          </p>
           <h2 class="prices-title section-title">Services and prices</h2>
           <ul class="prices-list list">
             <li class="prices-item">
@@ -159,16 +187,20 @@
             </li>
           </ul>
           <p>Old traditional school</p>
-          <h2 class="benefits-title section-title"><span>?</span>Why people come to us?</h2>
+          <h2 class="benefits-title section-title">
+            <span>?</span>Why people come to us?
+          </h2>
           <p class="benefits-after-title">
-            Only good things are said about us. But it's better to see and feel 1
-            time than read 10 times.
+            Only good things are said about us. But it's better to see and feel
+            1 time than read 10 times.
           </p>
         </div>
       </section>
       <section class="barbers section" id="barbers">
         <div class="container">
-          <p class="barbers-pre-title pre-title">For true enjoyers of the atmosphere</p>
+          <p class="barbers-pre-title pre-title">
+            For true enjoyers of the atmosphere
+          </p>
           <h2 class="barbers-title section-title">Our barbers</h2>
           <ul class="barbers-list list">
             <li class="barbers-item">
@@ -181,6 +213,39 @@
               <div class="barbers-wrap">
                 <h3 class="barbers-item-title">John Smith</h3>
                 <p class="barbers-item-text">Extreme Barber</p>
+                <ul class="barbers-soc-list list">
+                  <li class="barbers-soc-item">
+                    <a
+                      href=""
+                      class="barbers-soc-link link"
+                      aria-label="instagram"
+                    >
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link">
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-linkedin"></use>
+                      </svg></a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link">
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="barbers-soc-item">
+                    <a href="" class="barbers-soc-link link">
+                      <svg class="barbers-soc-icon" width="20" height="20">
+                        <use href="./img/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="barbers-item">
@@ -212,7 +277,9 @@
       </section>
       <section class="gallery section">
         <div class="container">
-          <p class="gallery-pre-title pre-title">In Latin, "barba" means "beard"</p>
+          <p class="gallery-pre-title pre-title">
+            In Latin, "barba" means "beard"
+          </p>
           <h2 class="visually-hidden">Gallery</h2>
           <ul class="gallery-list list">
             <li class="gallery-item">
@@ -265,9 +332,15 @@
             Kyiv, 08132</a
           >
           <ul class="contacts-list list">
-            <li class="contacts-item"><a class="contacts-link link" href="tel:+380441234567">+38 044 123 45 67</a></li>
             <li class="contacts-item">
-              <a class="contacts-link" href="mailto:barbershop@email.com">barbershop@email.com</a>
+              <a class="contacts-link link" href="tel:+380441234567"
+                >+38 044 123 45 67</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:barbershop@email.com"
+                >barbershop@email.com</a
+              >
             </li>
           </ul>
         </address>
@@ -289,7 +362,6 @@
           >
         </li>
       </ul>
-      
     </footer>
   </body>
 </html>
