--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
           </div>
           <div class="hero-wrap">
             <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
-            <h1 class="hero-title">BarberShop</h1>
+            <h1 class="hero-title animate__animated animate__wobble">BarberShop</h1>
             <p class="hero-after-title">
-              We are experts in trendy men’s haircuts.<br />
+              We are experts in trendy men’s haircuts.
               We work quickly, carefully and with style.
             </p>
           </div>
@@ -137,7 +137,7 @@
           <p class="prices-pre-title pre-title">
             Spend your time with the best masters
           </p>
-          <h2 class="prices-title section-title">Services and prices</h2>
+          <h2 class="prices-title section-title" data-aos="flip-left">Services and prices</h2>
           <div class="prices-wrap">
             <ul class="prices-list list">
               <li class="prices-item">
@@ -200,7 +200,7 @@
             </li>
           </ul>
           <div class="benefits-wrap">
-            <p>Old traditional school</p>
+            <p class="benefits-pre-title pre-title">Old traditional school</p>
             <h2 class="benefits-title section-title" data-aos="zoom-in-down">
               <span>?</span>Why people come to us?
             </h2>
@@ -342,6 +342,26 @@
         <div class="container">
           <section class="online section">
             <h2 class="online-title section-title">Online-booking</h2>
+            <form class="online-form">
+              <input
+                type="text"
+                placeholder="Name*"
+                class="online-input online-item"
+                name="online-name"
+              />
+              <input
+                type="tel"
+                placeholder="Phone*"
+                class="online-input online-item"
+                name="online-tel"
+              />
+              <textarea
+                name="online-text"
+                class="online-textarea online-item"
+                placeholder="Message"
+              ></textarea>
+              <button type="submit" class="btn online-btn">Send</button>
+            </form>
           </section>
           <section class="contacts section">
             <h2 class="contacts-title section-title">Contacts</h2>
@@ -373,20 +393,22 @@
         </div>
       </div>
     </main>
-    <footer>
-      <p>&#169;Copyright 2020</p>
-      <ul>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
-            >Instagram</a
-          >
-        </li>
-        <li>
-          <a href="" target="_blank" rel="noopener noreferrer nofollow"
-            >Youtube</a
-          >
-        </li>
-      </ul>
+    <footer class="footer">
+      <div class="container">
+        <p class="footer-copy">&#169;Copyright 2020</p>
+        <ul class="footer-list list">
+          <li class="footer-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              >Instagram</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="" target="_blank" rel="noopener noreferrer nofollow"
+              >Youtube</a
+            >
+          </li>
+        </ul>
+      </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -395,6 +417,100 @@
             <use href="./img/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Заголовок модального вікна</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="input-label">Введіть імя</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-input"
+                placeholder="Микола"
+                required
+                id="user-name"
+              />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <label class="input-label"
+            ><span>Ваш телефон</span>
+            <span class="input-wrap">
+              <input
+                type="tel"
+                name="user-tel"
+                class="modal-input"
+                placeholder="+380 (96) 111-11-11"
+                title="+380 (96) 111-11-11"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="18">
+                <use href="./img/icons.svg#icon-person"></use>
+              </svg>
+            </span>
+          </label>
+          <input
+            type="email"
+            name="user-email"
+            class="modal-input"
+            placeholder="Введіть пошту"
+          />
+          <div class="modal-field">
+            <label for="user-comment" class="input-label">Введіть імя</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-text"
+              placeholder="Комент"
+            ></textarea>
+          </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              name="privacy"
+              id="privacy"
+              class="input-check visually-hidden"
+            />
+            <label for="privacy" class="check-text">
+              <span>
+                <svg class="check-icon" width="16" height="15">
+                  <use href="./img/icons.svg#icon-che-1"></use>
+                </svg>
+              </span>
+              політика приватності</label
+            >
+          </div>
+          <ul class="filter-list list">
+            <li class="filter-item">
+              <input
+                type="radio"
+                name="filter"
+                id="all"
+                class="filter-check visually-hidden"
+              /><label for="all" class="filter-text">All</label>
+            </li>
+            <li class="filter-item">
+              <input
+                type="radio"
+                name="filter"
+                id="aps"
+                class="filter-check visually-hidden"
+              /><label for="aps" class="filter-text">Aps</label>
+            </li>
+            <li class="filter-item">
+              <input
+                type="radio"
+                name="filter"
+                id="design"
+                class="filter-check visually-hidden"
+              /><label for="design" class="filter-text">Design</label>
+            </li>
+          </ul>
+          <button type="submit" class="btn">Send</button>
+        </form>
       </div>
     </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
