--- a/index.html
+++ b/index.html
@@ -23,57 +23,57 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body class="site-body">
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-navigation">
-          <a class="header-logo" href="./index.html">
-            <svg class="logo-icon" width="69" height="55">
+      <div class="container header__container">
+        <nav class="navigation">
+          <a class="logo navigation__logo" href="./index.html">
+            <svg class="logo__icon" width="69" height="55">
               <use href="./img/icons.svg#icon-logo"></use>
             </svg>
           </a>
-          <ul class="header-list list">
-            <li class="header-item">
-              <a class="header-link link current" href="">About</a>
+          <ul class="menu list">
+            <li class="menu__item">
+              <a class="menu__link link current" href="">About</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="#prices">Services and prices</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="#prices">Services and prices</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="#barbers">Barbers</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="#barbers">Barbers</a>
             </li>
-            <li class="header-item">
-              <a class="header-link link" href="">Contacts</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="">Contacts</a>
             </li>
           </ul>
         </nav>
-       <div class="header-connect">
-          <a class="header-tel link" href="tel:+380441234567"
+       <div class="connect header__connect">
+          <a class="connect__tel link" href="tel:+380441234567"
             >+38 044 123 45 67</a
           >
-          <button class="header-btn btn" type="button" data-modal-open>Online-booking</button>
+          <button class="connect__btn btn" type="button" data-modal-open>Online-booking</button>
        </div>
       </div>
     </header>
     <main>
       <section class="hero">
-        <div class="container hero-container">
-          <div class="hero-soc">
-            <ul class="hero-list list">
-              <li class="hero-item">
+        <div class="container hero__container">
+          <div class="soc">
+            <ul class="soc__list list">
+              <li class="soc__item">
                 <a
-                  class="hero-link link"
+                  class="soc__link link"
                   href=""
                   target="_blank"
                   rel="noopener noreferrer nofollow"
                   >Instagram</a
                 >
               </li>
-              <li class="hero-item">
+              <li class="soc__item">
                 <a
-                  class="hero-link link"
+                  class="soc__link link"
                   href=""
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -82,10 +82,10 @@
               </li>
             </ul>
           </div>
-          <div class="hero-wrap">
-            <p class="hero-pre-title pre-title">A hair salon for men in Kyiv</p>
-            <h1 class="hero-title animate__animated animate__wobble">BarberShop</h1>
-            <p class="hero-after-title">
+          <div class="hero__wrap">
+            <p class="hero__pre-title pre-title">A hair salon for men in Kyiv</p>
+            <h1 class="hero__title animate__animated animate__wobble">BarberShop</h1>
+            <p class="hero__after-title">
               We are experts in trendy men’s haircuts.
               We work quickly, carefully and with style.
             </p>
@@ -93,9 +93,9 @@
         </div>
       </section>
       <section class="about section">
-        <div class="container about-container">
-          <ul class="about-list list">
-            <li class="about-item">
+        <div class="container about__container">
+          <ul class="pic-list list">
+            <li class="pic-list__item">
               <img
                 src="./img/abot-img-1.jpeg"
                 alt="haircut"
@@ -103,7 +103,7 @@
                 height="445"
               />
             </li>
-            <li class="about-item">
+            <li class="pic-list__item">
               <img
                 src="./img/abot-img-2.jpeg"
                 alt="haircut"
@@ -112,23 +112,23 @@
               />
             </li>
           </ul>
-          <div class="about-wrap">
-            <p class="about-pre-title pre-title">About</p>
-            <h2 class="about-title section-title" data-aos="fade-down">
+          <div class="about__wrap">
+            <p class="about__pre-title pre-title">About</p>
+            <h2 class="about__title section-title" data-aos="fade-down">
               Best Barbershop in your city
             </h2>
-            <p class="about-after-title">
+            <p class="about__after-title">
               If you want to add more confidence to your image, you should
               definitely visit us.
             </p>
-            <p class="about-text">
+            <p class="about__text">
               We are a team that never stops at what has been achieved and are
               thirsty for changes. And when you fall into the hands of our master,
               you will never be the same again. We are a team that is always "on
               the same wave" with clients. Therefore, we are always ready to
               improve everyone who comes to us!
             </p>
-            <button type="button" class="about-btn btn">Online-booking</button>
+            <button type="button" class="btn btn--color-dark">Online-booking</button>
           </div>
         </div>
       </section>
