--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="./css/main.min.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body class="site-body">
     <header class="header">
@@ -49,12 +49,76 @@
             </li>
           </ul>
         </nav>
-       <div class="connect header__connect">
+        <div class="connect header__connect">
           <a class="connect__tel link" href="tel:+380441234567"
-            >+38 044 123 45 67</a
-          >
-          <button class="connect__btn btn" type="button" data-modal-open>Online-booking</button>
-       </div>
+            >+38 044 123 45 67</a>
+          <button
+            class="connect__btn btn btn--color-light"
+            type="button"
+            data-modal-open>Online-booking</button>
+        </div>
+        <div class="menu-open"><button type="button" class="btn btn--color-light" data-menu-open>Open menu</button></div>
+      </div>
+      <div class="mob-menu is-hidden" data-menu>
+        <div class="container">
+          <div class="mob-menu-top">
+            <button type="button" class="menu-close" data-menu-close>X</button>
+            <ul class="mob-menu-list list">
+              <li class="mob-menu-list__item">
+                <a
+                  class="mob-menu-list__link link current"
+                  href="https://www.google.com/"
+                  >About</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a class="mob-menu-list__link link" href="#prices"
+                  >Services and prices</a
+                >
+              </li>
+              <li class="mob-menu-list__item">
+                <a class="mob-menu-list__link link" href="#barbers">Barbers</a>
+              </li>
+              <li class="mob-menu-list__item">
+                <a
+                  class="mob-menu-list__link link"
+                  href="https://www.google.com/"
+                  >Contacts</a>
+              </li>
+            </ul>
+          </div>
+          <div class="mob-menu-bottom">
+            <div class="mob-connect">
+              <a class="mob-connect__tel link" href="tel:+380441111111">
+                +38 044 111 11 11</a
+              >
+              <button
+                class="mob-connect__btn btn btn--color-dark"
+                type="button"
+                data-modal-open>Online-booking</button>
+            </div>
+            <ul class="mob-soc list">
+              <li class="mob-soc__item">
+                <a
+                  class="mob-soc__link link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Instagram</a
+                >
+              </li>
+              <li class="mob-soc__item">
+                <a
+                  class="mob-soc__link link"
+                  href=""
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -83,11 +147,15 @@
             </ul>
           </div>
           <div class="hero__wrap">
-            <p class="hero__pre-title pre-title">A hair salon for men in Kyiv</p>
-            <h1 class="hero__title animate__animated animate__wobble">BarberShop</h1>
+            <p class="hero__pre-title pre-title">
+              A hair salon for men in Kyiv
+            </p>
+            <h1 class="hero__title animate__animated animate__wobble">
+              BarberShop
+            </h1>
             <p class="hero__after-title">
-              We are experts in trendy men’s haircuts.
-              We work quickly, carefully and with style.
+              We are experts in trendy men’s haircuts. We work quickly,
+              carefully and with style.
             </p>
           </div>
         </div>
@@ -123,12 +191,14 @@
             </p>
             <p class="about__text">
               We are a team that never stops at what has been achieved and are
-              thirsty for changes. And when you fall into the hands of our master,
-              you will never be the same again. We are a team that is always "on
-              the same wave" with clients. Therefore, we are always ready to
-              improve everyone who comes to us!
+              thirsty for changes. And when you fall into the hands of our
+              master, you will never be the same again. We are a team that is
+              always "on the same wave" with clients. Therefore, we are always
+              ready to improve everyone who comes to us!
             </p>
-            <button type="button" class="btn btn--color-dark">Online-booking</button>
+            <button type="button" class="btn btn--color-dark" data-modal-open>
+              Online-booking
+            </button>
           </div>
         </div>
       </section>
@@ -137,7 +207,9 @@
           <p class="prices-pre-title pre-title">
             Spend your time with the best masters
           </p>
-          <h2 class="prices-title section-title" data-aos="flip-left">Services and prices</h2>
+          <h2 class="prices-title section-title" data-aos="flip-left">
+            Services and prices
+          </h2>
           <div class="prices-wrap">
             <ul class="prices-list list">
               <li class="prices-item">
@@ -205,8 +277,8 @@
               <span>?</span>Why people come to us?
             </h2>
             <p class="benefits-after-title">
-              Only good things are said about us. But it's better to see and feel
-              1 time than read 10 times.
+              Only good things are said about us. But it's better to see and
+              feel 1 time than read 10 times.
             </p>
           </div>
         </div>
@@ -220,17 +292,19 @@
           <ul class="barbers-list list">
             <li class="barbers-item">
               <div class="barbers-top-wrap">
-              <img
-                src="./img/barbers-img-1.jpeg"
-                alt="haircut"
-                width="370"
-                height="346"
-              /><p class="barbers-top-text">
+                <img
+                  src="./img/barbers-img-1.jpeg"
+                  alt="haircut"
+                  width="370"
+                  height="346"
+                />
+                <p class="barbers-top-text">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi
                   impedit vitae sunt eaque. Vel possimus autem ipsam ipsa?
                   Facere quo eius possimus ipsum corporis consectetur asperiores
                   amet ipsa voluptatum voluptatem. Lorem, ipsum dolor sit amet
-                </p></div>
+                </p>
+              </div>
               <div class="barbers-wrap">
                 <h3 class="barbers-item-title">John Smith</h3>
                 <p class="barbers-item-text">Extreme Barber</p>
@@ -249,8 +323,7 @@
                   <li class="barbers-soc-item">
                     <a href="" class="barbers-soc-link link">
                       <svg class="barbers-soc-icon" width="20" height="20">
-                        <use href="./img/icons.svg#icon-linkedin"></use>
-                      </svg></a>
+                        <use href="./img/icons.svg#icon-linkedin"></use></svg></a>
                   </li>
                   <li class="barbers-soc-item">
                     <a href="" class="barbers-soc-link link">
@@ -518,5 +591,6 @@
       AOS.init();
     </script>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
